src/app-groups/ssp/apps/frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend-label
    service: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-label
    service: frontend
  ports:
    - name: "http"
      protocol: TCP
      port: 1111
      targetPort: 80
